fixed an alignment issue with an icon

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1199,7 +1199,7 @@ aside {
 
 /* various different icons */
 
-.well-footer li > [class^="icon-comment"] {
+.well-footer [class^="icon-comment"] {
   margin-right: 5px;
   margin-left: 3px;
   vertical-align: -3px;
